<resources>
    <string name="app_name">WhatDoILearn</string>
    <string name="texto">O jogo é baseado em partidas norsária e, para isso, , que levam à suas bases. Existem 3 trilhas no mapa do jogo, que por convenção são chamadas de trilha de cima (Top, atravessa a parte de cima do mapa), trilha do meio (Mid ou Middle, caminho que atravessa o centro do mapa) e trilha de baixo (Bot ou Bottom, caminho que atravessa a parte de baixo do mapa).</string>
    <string name="item_title">Item Title:</string>
    <string name="item_description">Item Description:</string>
    <string name="low">LOW</string>
    <string name="level">Level:</string>
    <string name="salvar">Salvar</string>
    <string name="medium">MEDIUM</string>
    <string name="high">HIGH</string>
</resources>